--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6,57 +6,78 @@
     --grayLight: #eeeeee;
     --white: #ffffff;
 }
+/* fonts */
+@font-face {
+  font-family: clearlight;
+  src: url("../fonts/clearlight.ttf");
+  font-weight: normal;
+}
+@font-face {
+  font-family: arial-narrow;
+  src: url("../fonts/arial-narrow.ttf");
+  font-weight: normal;
+}
+
+body {
+    min-height: 2000px;
+    font-family: arial-narrow;
+}
 /* It'd be better to find something like parameter passing idk
 /* font colors*/
 .green {
-    color: #5dd782 !important;
+    color: var(--green);
 }
 .greenDark {
-    color: #49b56a;
+    color: var(--greenDark);
+
 }
 .greenLight {
-    color: #67ee90;
+    color: var(--);
 }
 .gray {
-    color: #333333;
+    color: var(--);;
 }
 .grayLight {
-    color: #eeeeee;
+    color: var(--);;
 }
 .white {
-    color: #ffffff;
+    color: var(--);;
 }
 /* bg colors */
 .bg-green {
-    background-color: #5dd782;
+    background-color: var(--);;
 }
 .bg-greenDark {
-    background-color: #49b56a;
+    background-color: var(--);;
 }
 .bg-greenLight {
-    background-color: #67ee90;
+    background-color: var(--);;
 }
 .bg-gray {
-    background-color: #333333;
+    background-color: var(--);;
 }
 .bg-grayLight {
-    background-color: #eeeeee;
+    background-color: var(--);;
 }
 .bg-white {
-    background-color: #ffffff;
+    background-color: var(--);;
 }
-
 .banner {
     background-image: url("../img/shanghai_park_main.png");
-    /* Full height */
+}
+.parallax {
     height: 500px;
     width: 100%;
-    /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
-body {
-    min-height: 1000px;
+.banner h1 {
+    text-transform: uppercase;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.2);
+    display: ;
+    padding: 15px 7px;
+    font-family: clearlight;
 }
