--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,11 +1,3 @@
-:root {
-    --green: #5dd782;
-    --greenDark: #49b56a;
-    --greenLight: #67ee90;
-    --gray: #333333;
-    --grayLight: #eeeeee;
-    --white: #ffffff;
-}
 /* fonts */
 @font-face {
   font-family: clearlight;
@@ -17,7 +9,15 @@
   src: url("../fonts/arial-narrow.ttf");
   font-weight: normal;
 }
-
+/*root */
+:root {
+    --green: #5dd782
+    --greenDark: #49b56a
+    --greenLight: #67ee90
+    --gray: #333333
+    --grayLight: #eeeeee
+    --white: #ffffff
+}
 body {
     min-height: 2000px;
     font-family: arial-narrow;
@@ -29,55 +29,72 @@ body {
 }
 .greenDark {
     color: var(--greenDark);
-
 }
 .greenLight {
-    color: var(--);
+    color: var(--greenLight);
 }
 .gray {
-    color: var(--);;
+    color: var(--gray);
 }
 .grayLight {
-    color: var(--);;
+    color: var(--grayLight);
 }
 .white {
-    color: var(--);;
+    color: var(--white);
 }
 /* bg colors */
 .bg-green {
-    background-color: var(--);;
+    background-color: var(--green);
 }
 .bg-greenDark {
-    background-color: var(--);;
+    background-color: var(--greenDark);
 }
 .bg-greenLight {
-    background-color: var(--);;
+    background-color: var(--greenLight);
 }
 .bg-gray {
-    background-color: var(--);;
+    background-color: var(--gray);
 }
 .bg-grayLight {
-    background-color: var(--);;
+    background-color: var(--grayLight);
 }
 .bg-white {
-    background-color: var(--);;
+    background-color: var(--white);
 }
+/* header area */
+.navbar-collapse.show {
+    
+}
+/* banner area */
 .banner {
-    background-image: url("../img/shanghai_park_main.png");
+    min-height: 100px;
+    max-height: 600px;
+    height: 30vw;
+    min-width: 100%;
+    /*background-size: cover;*/
+    position: relative;
+    top: 75px;
+    border-bottom: 1px solid black;
 }
 .parallax {
-    height: 500px;
+    position: absolute;
     width: 100%;
+    height: 100%;
+    background-image: url("../img/shanghai_park_main.png");
     background-attachment: fixed;
-    background-position: center;
+    background-position: 50% 75px;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% auto;
+    z-index: -10;
 }
-.banner h1 {
-    text-transform: uppercase;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.2);
-    display: ;
+.banner-text {
+    display: inline-block;
     padding: 15px 7px;
+    margin-top: 10%;
+    float: right;
+    color: var(--white);
+    font-size: 4vw;
     font-family: clearlight;
+    text-transform: uppercase;
+    background-color: rgba(0, 0, 0, 0.5);
 }
