--- a/public/css/index.css
+++ b/public/css/index.css
@@ -11,19 +11,114 @@
 }
 /*root */
 :root {
-    --green: #5dd782
-    --greenDark: #49b56a
-    --greenLight: #67ee90
-    --gray: #333333
-    --grayLight: #eeeeee
-    --white: #ffffff
+    --green: #5dd782;
+    --greenDark: #49b56a;
+    --greenLight: #67ee90;
+    --gray: #333333;
+    --grayLight: #eeeeee;
+    --white: #ffffff;
 }
 body {
     min-height: 2000px;
     font-family: arial-narrow;
+    background-color: white;
+    z-index: 0;
 }
+
+/* header area */
+.fakeBackground {
+    position: fixed;
+    width: 100%;
+    height: 100px;
+    background-color: var(--white);
+}
+.blackRow {
+    height: 50%;
+    background-color: var(--gray);
+}
+nav.navbar {
+    position: fixed;
+    top: -0;
+    left: 0;
+    right: 0;
+}
+.navbar-brand  {
+    position: relative;
+    top: -10px;
+    transform: skew(-20deg);
+    background: var(--white);
+}
+.navbar-brand img {
+    transform: skew(20deg);
+    margin: 2px 10px;
+}
+.navbar-collapse {
+    font-size: 20px;
+    margin-top: 40px;
+    background-color: var(--white) !important;
+}
+.nav-item .nav-link {
+    padding: 5px;
+    color: var(--gray) !important;
+    opacity: 1;
+}
+.nav-item.active .nav-link {
+    background-color: var(--green);
+    color: var(--white) !important;
+    opacity: 1;
+
+}
+.nav-link:hover {
+    background-color: var(--greenDark);
+    color: var(--white) !important;
+    opacity: 1 !important;
+}
+/* mobile view header */
+@media only screen and (max-width: 768px){
+    .navbar-collapse {
+        margin-top: 0;
+    }
+}
+/* banner area */
+.banner {
+    min-height: 100px;
+    max-height: 600px;
+    height: 30vw;
+    min-width: 100%;
+    /*background-size: cover;*/
+    position: relative;
+    top: 100px;
+    z-index: -10;
+    border-bottom: 1px solid black;
+}
+.parallax {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/shanghai_park_main.png");
+    background-attachment: fixed;
+    background-position: 50% 100px;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    z-index: -999;
+}
+.banner-text {
+    display: inline-block;
+    padding: 15px 7px;
+    margin-top: 10%;
+    float: right;
+    color: var(--white);
+    font-size: 4vw;
+    font-family: clearlight;
+    text-transform: uppercase;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+
+/* trash but may use later 
+
 /* It'd be better to find something like parameter passing idk
-/* font colors*/
+/* font colors
 .green {
     color: var(--green);
 }
@@ -42,7 +137,7 @@ body {
 .white {
     color: var(--white);
 }
-/* bg colors */
+/* bg colors 
 .bg-green {
     background-color: var(--green);
 }
@@ -61,40 +156,5 @@ body {
 .bg-white {
     background-color: var(--white);
 }
-/* header area */
-.navbar-collapse.show {
-    
-}
-/* banner area */
-.banner {
-    min-height: 100px;
-    max-height: 600px;
-    height: 30vw;
-    min-width: 100%;
-    /*background-size: cover;*/
-    position: relative;
-    top: 75px;
-    border-bottom: 1px solid black;
-}
-.parallax {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-image: url("../img/shanghai_park_main.png");
-    background-attachment: fixed;
-    background-position: 50% 75px;
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-    z-index: -10;
-}
-.banner-text {
-    display: inline-block;
-    padding: 15px 7px;
-    margin-top: 10%;
-    float: right;
-    color: var(--white);
-    font-size: 4vw;
-    font-family: clearlight;
-    text-transform: uppercase;
-    background-color: rgba(0, 0, 0, 0.5);
-}
+
+*/
