--- a/public/css/index.css
+++ b/public/css/index.css
@@ -36,6 +36,9 @@ body {
     height: 50%;
     background-color: var(--gray);
 }
+.blackRow .container {
+    color: var(--white);
+}
 nav.navbar {
     position: fixed;
     top: -0;
@@ -53,30 +56,27 @@ nav.navbar {
     margin: 2px 10px;
 }
 .navbar-collapse {
-    font-size: 20px;
     margin-top: 40px;
     background-color: var(--white) !important;
 }
 .nav-item .nav-link {
+    font-size: 1.2vw;
     padding: 5px;
     color: var(--gray) !important;
-    opacity: 1;
+    text-transform: uppercase;
 }
 .nav-item.active .nav-link {
     background-color: var(--green);
     color: var(--white) !important;
-    opacity: 1;
-
 }
 .nav-link:hover {
     background-color: var(--greenDark);
     color: var(--white) !important;
-    opacity: 1 !important;
 }
 /* mobile view header */
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 767px){
     .navbar-collapse {
-        margin-top: 0;
+        margin-top: -10px;
     }
 }
 /* banner area */
