--- a/public/css/index.css
+++ b/public/css/index.css
@@ -65,7 +65,7 @@ body {
 /* header area */
 .fakeBackground {
     position: fixed;
-    z-index: 9998;
+    z-index: 99;
     width: 100%;
     height: 100px;
     background-color: var(--white);
@@ -82,7 +82,7 @@ nav.navbar {
     top: -0;
     left: 0;
     right: 0;
-    z-index: 9999;
+    z-index: 100;
 }
 .navbar-brand  {
     position: relative;
@@ -138,7 +138,7 @@ nav.navbar {
     background-position: 50% 100px;
     background-repeat: no-repeat;
     background-size: 100% auto;
-    z-index: -999;
+    z-index: -100;
 }
 .banner-text {
     display: inline-block;
@@ -175,6 +175,11 @@ nav.navbar {
     height: 100%;
     filter: grayscale(0.7);
 }
+@media only screen and (max-width: 767px){
+    .image {
+        filter: none;
+    }
+}
 .image:hover {
     width: 105%;
     height: 105%;
@@ -182,8 +187,58 @@ nav.navbar {
     left: -2.5%
     z-index: 997;
 }
-
-
+/* gallery modals */
+/* The Modal (background) */
+.modal {
+ display: none; /* Hidden by default */
+ position: fixed; /* Stay in place */
+ z-index: 110; /* Sit on top */
+ padding-top: 100px; /* Location of the box */
+ left: 0;
+ top: 0;
+ width: 100%; /* Full width */
+ height: 100%; /* Full height */
+ overflow: auto; /* Enable scroll if needed */
+ background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+/* Modal Content (Image) */
+.modal-content {
+ margin: auto;
+ display: block;
+ width: 80%;
+ max-width: 768px;
+}
+/* Add Animation - Zoom in the Modal */
+.modal-content {
+ animation-name: zoom;
+ animation-duration: 0.6s;
+}
+@keyframes zoom {
+ from {transform:scale(0)}
+ to {transform:scale(1)}
+}
+/* The Close Button */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: var(--grayLight) !important;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+.close:hover,
+.close:focus {
+    color: var(--white) !important;
+    text-decoration: none;
+    cursor: pointer;
+}
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 767px){
+    .modal-content {
+        width: 100%;
+    }
+}
 
 /* trash but may use later
 
