--- a/public/css/index.css
+++ b/public/css/index.css
@@ -99,7 +99,7 @@ nav.navbar {
     background-color: var(--white) !important;
 }
 .nav-item .nav-link {
-    font-size: 1.2vw;
+    font-size: 1rem;
     padding: 5px;
     color: var(--gray) !important;
     text-transform: uppercase;
@@ -165,9 +165,6 @@ nav.navbar {
 /* Environment part */
 .btn.bg-greenDark:active {
     background-color: var(--greenLight) !important;
-}
-#environmentImage {
-    
 }
 #environmentImage span {
     /* triangle thing */
