--- a/public/css/index.css
+++ b/public/css/index.css
@@ -151,6 +151,7 @@ nav.navbar {
     text-transform: uppercase;
     background-color: rgba(0, 0, 0, 0.5);
 }
+
 /* ___actual content___ */
 .firstContent {
     padding-top: 20vh;
@@ -175,32 +176,58 @@ nav.navbar {
     border-left: 30px solid white;
     
 }
+/* flat selection */
+area {
+    background-color: rgba(0, 200, 0, 0.5);
+    display: block;
+}
+#floorDisplay {
+    position: absolute;
+    top: 15px;
+    right: 5px;
+    color: var(--white);
+}
+#floorSelector {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 10px 0;
+}
+#floorSelector .floor {
+    border: 1px solid black !important;
+    color: red;
+    background-color: rgba(0, 255, 0, 0.5) !important;
+    z-index: 1000;
+}
+
+
 /* Gallery part */
 .images {
     min-height: 200px;
     border-radius: 5%;
 }
 .image {
-    object-fit: cover;
     width: 100%;
     height: 100%;
     filter: grayscale(0.7);
+    transition: filter 1s, transform 0.5s
 }
+/* on mobile view*/
 @media only screen and (max-width: 767px){
     .image {
         filter: none;
     }
 }
 .image:hover {
-    width: 105%;
-    height: 105%;
-    top: -2.5%;
-    left: -2.5%;
-    z-index: 997;
+    filter: none;
+    transform: scale(1.05);
 }
-/* gallery modals */
-/* The Modal (background) */
-.modal {
+
+
+/* gallery modal */
+.imgModal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 110; /* Sit on top */
@@ -213,14 +240,14 @@ nav.navbar {
  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
 }
 /* Modal Content (Image) */
-.modal-content {
+.imgModal-content {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 768px;
 }
 /* Add Animation - Zoom in the Modal */
-.modal-content {
+.imgModal-content {
  animation-name: zoom;
  animation-duration: 0.6s;
 }
@@ -229,7 +256,7 @@ nav.navbar {
  to {transform:scale(1)}
 }
 /* The Close Button */
-.close {
+.imgClose {
     position: absolute;
     top: 15px;
     right: 35px;
@@ -238,14 +265,14 @@ nav.navbar {
     font-weight: bold;
     transition: 0.3s;
 }
-.close:hover, .close:focus {
+.imgClose:hover, .imgClose:focus {
     color: var(--white) !important;
     text-decoration: none;
     cursor: pointer;
 }
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 767px){
-    .modal-content {
+    .imgModal-content {
         width: 100%;
     }
 }
