--- a/public/css/index.css
+++ b/public/css/index.css
@@ -187,21 +187,22 @@ area {
     right: 5px;
     color: var(--white);
 }
-#floorSelector {
-    position: absolute;
-    top: 0;
-    left: 0;
+#floorSelection {
+    background-image: url("../img/shanghai_park_building.png");
     width: 100%;
-    height: 100%;
-    padding: 10px 0;
+    height: 400px;
+    background-position: -100px 0;
+    background-repeat: no-repeat;
+    background-size: 120% auto;
 }
-#floorSelector .floor {
-    border: 1px solid black !important;
-    color: red;
-    background-color: rgba(0, 255, 0, 0.5) !important;
-    z-index: 1000;
+.floor:hover {
+    background-color: var(--greenLight);
+    opacity: 0.2;
 }
-
+.floor.active {
+    background-color: var(--green);
+    opacity: 0.5;
+}
 
 /* Gallery part */
 .images {
