--- a/public/css/index.css
+++ b/public/css/index.css
@@ -120,8 +120,6 @@ nav.navbar {
 }
 /* ___banner area___ */
 .banner {
-    min-height: 100px;
-    max-height: 600px;
     height: 30vw;
     min-width: 100%;
     /*background-size: cover;*/
@@ -140,6 +138,15 @@ nav.navbar {
     background-size: 100% auto;
     z-index: -100;
 }
+@media only screen and (max-width: 767px){
+    .banner {
+            height: 70vw;
+        }
+        .parallax {
+            background-size: auto 70vw;
+        }
+}
+
 .banner-text {
     display: inline-block;
     padding: 15px 7px;
@@ -151,6 +158,7 @@ nav.navbar {
     text-transform: uppercase;
     background-color: rgba(0, 0, 0, 0.5);
 }
+
 
 /* ___actual content___ */
 .firstContent {
