--- a/public/css/index.css
+++ b/public/css/index.css
@@ -140,10 +140,10 @@ nav.navbar {
 }
 @media only screen and (max-width: 767px){
     .banner {
-            height: 100vh;
+            height: 70vw;
         }
         .parallax {
-            background-size: auto 100vw;
+            background-size: auto 70vw;
         }
 }
 
